# rustmailer-rest-cli

./: README.md  pyproject.toml
src/rustmailer_rest_cli/: __init__.py  cli.py  spec.yaml
